[package]
name = "gamba"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "gamba"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.0"
bytemuck = "1.7.3"


[dev-dependencies]
solana-program-test = "=1.9.4"
solana-program = "=1.9.4"